src/tests/snapshots/cendol__tests__semantic_shift_float__compound_shift_float.snap
---
source: src/tests/semantic_shift_float.rs
expression: output
---
Diagnostics count: 2

Level: Error
Message: Invalid operands for binary operation: have 'float' and 'int'
Span: SourceSpan(source_id=SourceId(2), start=61, end=68)

Level: Error
Message: Invalid operands for binary operation: have 'float' and 'int'
Span: SourceSpan(source_id=SourceId(2), start=61, end=68)
