src/tests/snapshots/cendol__tests__semantic_shift_float__shift_left_float_lhs.snap
---
source: src/tests/semantic_shift_float.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Invalid operands for binary operation: have 'float' and 'int'
Span: SourceSpan(source_id=SourceId(2), start=69, end=75)
