src/tests/snapshots/cendol__tests__semantic_shift_float__shift_right_float_rhs.snap
---
source: src/tests/semantic_shift_float.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Invalid operands for binary operation: have 'int' and 'float'
Span: SourceSpan(source_id=SourceId(2), start=92, end=98)
